<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/welcome_back"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp"
            android:textStyle="italic"
            android:layout_gravity="center_horizontal" />

        <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">
        <EditText android:id="@+id/login_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">
        <EditText android:id="@+id/password_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:inputType="textPassword"
            android:hint="@string/password_hint" />
    </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/name_chbx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:text="@string/remember_name"
            android:textSize="12sp"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/login_bnt"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/login"
            android:textColor="@color/toolbar_color"
            android:background="@drawable/button_states"
            android:textSize="14sp"
            android:enabled="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/progressBar"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:indeterminate="false"
            android:visibility="invisible" />

    </LinearLayout>

</FrameLayout>