<resources>
    <string name="app_name">DemoProject</string>
    <string name="action_settings">Settings</string>
    <string name="login">LOGIN</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="remember_name">Remember username</string>
    <string name="get_token_error">There is a problem with your network</string>
    <string name="repo_update_failed">"Couldn't update your repo"</string>
    <string name="credentials_error_message">Wrong username and/or password</string>
    <string name="repoList_network_error">Network error !</string>
    <string name="connection_error_message">Wrong user or some network error</string>
    <string name="fill_in_username">Please enter username</string>
    <string name="fill_in_password">Please enter password</string>
    <string name="toolbar_repos_list">Repository List</string>
    <string name="toolbar_repos_sync">Synchronization Log</string>
    <string name="toolbar_repos_like_list">Like List</string>
    <string name="menu_signout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="alert_delete_ok">OK</string>
    <string name="alert_delete_cancel">Cancel</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="get_avatar_error">Get avatar error</string>
    <string name="user_is_null">Invalid user</string>

    <string name="bottom_bar_menu_sync">Synchronise</string>
    <string name="bottom_bar_menu_like">Like</string>
    <string name="bottom_bar_menu_repo_list">Repository</string>

    <string name="try_again">Try again</string>

    <string name="settings_enable_auto_sync">Auto synchronization</string>
    <string name="settings_auto_sync_timer">Synchronization</string>
    <string name="settings_auto_sync_timer_value">Every %d minutes</string>

    <string name="progress_dialog_loading">Loading…</string>
    <string name="toolbar_repos_details">Repository details</string>
    <string name="repo_size">%f Megabytes</string>
    <string name="unknown_language">unknown</string>
    <string name="notification_error_title">Network Error</string>
    <string name="notification_error_text">Click to open repository list.</string>

    <string name="description_name">Name:</string>
    <string name="description_id">ID:</string>
    <string name="description">Description:</string>
    <string name="description_home_URL">Home URL:</string>
    <string name="description_defaultbranch">Default branch:</string>
    <string name="description_code_language">Code language:</string>
    <string name="description_size">Size:</string>
    <string name="description_last_push">Last push at:</string>
    <string name="description_open_issues">Open issues:</string>
    <string name="description_none">None</string>

    <string name="mihail_likes_it">Mihail Bohnearschi likes this app</string>
    <string name="ivan_likes_it">Ivan Croitor likes this app</string>
    <string name="refreshList">refreshList</string>
    <string name="successful_login_tag">successful_login</string>
    <string name="credential_error_tag">credential_error</string>
    <string name="connection_error_tag">connection_error</string>
    <string name="commits_list">%s Commits</string>
    <string name="commit_number">Commit: %d</string>
    <string name="name">Name: %s</string>
    <string name="email">E-mail: %s</string>
</resources>
